完成了渠道的打包下载功能
渠道模块已全部完成
